Update test accounts with assigned cutover EVM addresses

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                                 </tr>
                             </thead>
                             <tbody id="test-accounts-body">
-                                <tr>
+                                <tr id="account-kanley">
                                     <td>Kanley Stubrick</td>
-                                    <td><span class="text-monospace small">tz1XTbJrMGHan4vEYmE7xpCKExBi3oDYYmPI3</span></td>
-                                    <td><span class="text-monospace small">0x7A23608a8eBe71868013BDA0d900351A83bb4Dc2</span></td>
+                                    <td><span class="text-monospace small">tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33</span></td>
+                                    <td><span class="text-monospace small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</span></td>
                                     <td><span class="badge bg-success">Completed</span></td>
-                                    <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning">Moderator</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning text-dark">Moderator</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
                                     <td>40.4</td>
@@ -201,10 +201,10 @@
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="kanley">Details</button>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr id="account-herner">
                                     <td>Herner werzog</td>
-                                    <td><span class="text-monospace small">tz2HYEVENZnJxtzXChvZxSwQaSVnJDSN</span></td>
-                                    <td><span class="text-monospace small">To be assigned</span></td>
+                                    <td><span class="text-monospace small">tz2HYEvNZ8yhzfCdExtcCkrgwCzSwS9mQDSN</span></td>
+                                    <td><span class="text-monospace small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>0.98</td>
@@ -215,10 +215,10 @@
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="herner">Details</button>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr id="account-twitter">
                                     <td>TwitterProd</td>
-                                    <td><span class="text-monospace small">tz2GYLLxLJQqyaYmE1qVkLppEKfKRK4q52gf</span></td>
-                                    <td><span class="text-monospace small">To be assigned</span></td>
+                                    <td><span class="text-monospace small">tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</span></td>
+                                    <td><span class="text-monospace small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
                                     <td>2.39</td>
@@ -229,10 +229,10 @@
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="twitter">Details</button>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr id="account-keith">
                                     <td>Keith Fellini</td>
-                                    <td><span class="text-monospace small">tz1YX9mD4pdrz4vYpyE9dMMkJJaWFX6qa9Qs</span></td>
-                                    <td><span class="text-monospace small">To be assigned</span></td>
+                                    <td><span class="text-monospace small">tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</span></td>
+                                    <td><span class="text-monospace small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>3080.69</td>
