Update character profile pages with assigned Base L3 addresses and fix balance values

--- a/character-detail-kanley.html
+++ b/character-detail-kanley.html
@@ -115,8 +115,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Current Values</h5>
                                 <p><strong>Tezos Address:</strong><br><code>tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33</code></p>
-                                <p><strong>Internal Balance:</strong> <span class="text-success">684.61</span></p>
-                                <p><strong>External Balance:</strong> <span class="text-primary">55.88</span></p>
+                                <p><strong>Internal Balance:</strong> <span class="text-success">55.88</span></p>
+                                <p><strong>External Balance:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-warning">40.4</span></p>
                                 <p><strong>Block Hash:</strong> <code>tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33</code></p>
@@ -131,9 +131,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
-                                <p><strong>Base L3 Address:</strong> <span class="text-success">0x7A23608a8eBe71868013BDA0d900351A83bb4Dc2</span></p>
-                                <p><strong>Internal Balance Target:</strong> <span class="text-success">684.61</span></p>
-                                <p><strong>External Balance Target:</strong> <span class="text-primary">55.88</span></p>
+                                <p><strong>Base L3 Address:</strong> <code>0x476bB9fADF338B7cB58D9775ab6E635faA042B47</code></p>
+                                <p><strong>Internal Balance Target:</strong> <span class="text-success">55.88</span></p>
+                                <p><strong>External Balance Target:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-warning">40.4</span></p>
                                 <p><strong>Moderator Privileges:</strong> <span class="text-success">Must be preserved</span></p>
