--- a/character-detail-keith.html
+++ b/character-detail-keith.html
@@ -106,8 +106,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Current Values</h5>
                                 <p><strong>Tezos Address:</strong><br><code>tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</code></p>
-                                <p><strong>Internal Balance:</strong> <span class="text-success">194.9</span></p>
-                                <p><strong>External Balance:</strong> <span class="text-primary">3080.69</span></p>
+                                <p><strong>Internal Balance:</strong> <span class="text-success">3080.69</span></p>
+                                <p><strong>External Balance:</strong> <span class="text-primary">194.9</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">3275.59</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-secondary">0</span></p>
                                 <p><strong>Block Hash:</strong> <code>tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</code></p>
@@ -122,9 +122,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
-                                <p><strong>Base L3 Address:</strong> <span class="text-muted">To be assigned</span></p>
-                                <p><strong>Internal Balance Target:</strong> <span class="text-success">194.9</span></p>
-                                <p><strong>External Balance Target:</strong> <span class="text-primary">3080.69</span></p>
+                                <p><strong>Base L3 Address:</strong> <code>0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></p>
+                                <p><strong>Internal Balance Target:</strong> <span class="text-success">3080.69</span></p>
+                                <p><strong>External Balance Target:</strong> <span class="text-primary">194.9</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">3275.59</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-secondary">0</span></p>
                                 <p><strong>Auth Status:</strong> <span class="text-warning">Mixed 2FA, ID verification in review</span></p>
