--- a/character-detail-herner.html
+++ b/character-detail-herner.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
-                                <p><strong>Base L3 Address:</strong> <span class="text-muted">To be assigned</span></p>
+                                <p><strong>Base L3 Address:</strong> <code>0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</code></p>
                                 <p><strong>Internal Balance Target:</strong> <span class="text-success">6.06</span></p>
                                 <p><strong>External Balance Target:</strong> <span class="text-primary">0.98</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">7.04</span></p>
