--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -106,8 +106,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Current Values</h5>
                                 <p><strong>Tezos Address:</strong><br><code>tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</code></p>
-                                <p><strong>Internal Balance:</strong> <span class="text-success">0</span></p>
-                                <p><strong>External Balance:</strong> <span class="text-primary">2.39</span></p>
+                                <p><strong>Internal Balance:</strong> <span class="text-success">2.39</span></p>
+                                <p><strong>External Balance:</strong> <span class="text-primary">0</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">2.39</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-secondary">0</span></p>
                                 <p><strong>Block Hash:</strong> <code>tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</code></p>
@@ -122,9 +122,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
-                                <p><strong>Base L3 Address:</strong> <span class="text-muted">To be assigned</span></p>
-                                <p><strong>Internal Balance Target:</strong> <span class="text-success">0</span></p>
-                                <p><strong>External Balance Target:</strong> <span class="text-primary">2.39</span></p>
+                                <p><strong>Base L3 Address:</strong> <code>0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</code></p>
+                                <p><strong>Internal Balance Target:</strong> <span class="text-success">2.39</span></p>
+                                <p><strong>External Balance Target:</strong> <span class="text-primary">0</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">2.39</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-secondary">0</span></p>
                                 <p><strong>Social Auth Status:</strong> <span class="text-info">Must preserve X connection</span></p>
