Update migration verification steps in character profiles

--- a/character-detail-herner.html
+++ b/character-detail-herner.html
@@ -151,7 +151,7 @@
                                     <tr>
                                         <td>1. Data Snapshot</td>
                                         <td>Verify Tezos blockchain data capture</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
@@ -168,19 +168,8 @@
                                         <td>Verify TALNT token balance on Base L3</td>
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
-                                    <tr>
-                                        <td>5. Verification Status</td>
-                                        <td>Confirm "Failed" status persists</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
-                                    </tr>
                                 </tbody>
                             </table>
-                        </div>
-                        
-                        <div class="alert alert-warning mt-3">
-                            <i class="bi bi-exclamation-triangle me-2"></i>
-                            <strong>Verification Note:</strong> Run the account migration scripts to automate verification of this character's migration:
-                            <pre class="mt-2 mb-0"><code>./account-migration-tracer.sh</code></pre>
                         </div>
                     </div>
                 </div>
