--- a/character-detail-keith.html
+++ b/character-detail-keith.html
@@ -151,7 +151,7 @@
                                     <tr>
                                         <td>1. Data Snapshot</td>
                                         <td>Verify Tezos blockchain data capture</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
@@ -159,7 +159,7 @@
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
                                     <tr>
-                                        <td>3. Wallet Authentication</td>
+                                        <td>3. User Authentication</td>
                                         <td>Test login with Sentinel Wallet</td>
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
@@ -168,21 +168,10 @@
                                         <td>Verify TALNT token balance on Base L3</td>
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
-                                    <tr>
-                                        <td>5. Baker/Validator Capabilities</td>
-                                        <td>Test staking and validation features</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                         
-                        <div class="alert alert-warning mt-3">
-                            <i class="bi bi-exclamation-triangle me-2"></i>
-                            <strong>Verification Note:</strong> Run the account migration scripts to automate verification of this character's migration:
-                            <pre class="mt-2 mb-0"><code>./account-migration-tracer.sh</code></pre>
-                        </div>
-
                         <div class="alert alert-warning mt-3">
                             <i class="bi bi-wallet2 me-2"></i>
                             <strong>High Value Alert:</strong> This account contains a substantial balance (3275.59 TALNT). Extra verification of balance accuracy is required post-migration.
