--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -151,7 +151,7 @@
                                     <tr>
                                         <td>1. Data Snapshot</td>
                                         <td>Verify Tezos blockchain data capture</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
@@ -159,8 +159,8 @@
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
                                     <tr>
-                                        <td>3. Social Authentication</td>
-                                        <td>Test login via X (Twitter) OAuth</td>
+                                        <td>3. User Authentication</td>
+                                        <td>Test login with X (Twitter) Auth</td>
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
                                     <tr>
@@ -168,21 +168,10 @@
                                         <td>Verify TALNT token balance on Base L3</td>
                                         <td><span class="badge bg-secondary">Not Started</span></td>
                                     </tr>
-                                    <tr>
-                                        <td>5. Social Integration</td>
-                                        <td>Test social media connections</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                         
-                        <div class="alert alert-warning mt-3">
-                            <i class="bi bi-exclamation-triangle me-2"></i>
-                            <strong>Verification Note:</strong> Run the account migration scripts to automate verification of this character's migration:
-                            <pre class="mt-2 mb-0"><code>./account-migration-tracer.sh</code></pre>
-                        </div>
-
                         <div class="alert alert-danger mt-3">
                             <i class="bi bi-bug me-2"></i>
                             <strong>Bug Report:</strong> Missing email field for this account. This issue should be tracked and resolved as part of the migration process.
