--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="characters.html">Characters</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#test-cases">Test Cases</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#reports">Reports</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -191,12 +185,12 @@
                                     <td>Kanley Stubrick</td>
                                     <td><span class="text-monospace small">tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33</span></td>
                                     <td><span class="text-monospace small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</span></td>
-                                    <td><span class="badge bg-success">Completed</span></td>
+                                    <td><span class="badge bg-warning text-dark">Partial</span></td>
                                     <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning text-dark">Moderator</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
                                     <td>40.4</td>
-                                    <td><span class="badge bg-success">Verified</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="kanley">Details</button>
                                     </td>
@@ -205,12 +199,12 @@
                                     <td>Herner werzog</td>
                                     <td><span class="text-monospace small">tz2HYEvNZ8yhzfCdExtcCkrgwCzSwS9mQDSN</span></td>
                                     <td><span class="text-monospace small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</span></td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-warning text-dark">Partial</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>0.98</td>
                                     <td>6.06</td>
                                     <td>0</td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="herner">Details</button>
                                     </td>
@@ -219,12 +213,12 @@
                                     <td>TwitterProd</td>
                                     <td><span class="text-monospace small">tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</span></td>
                                     <td><span class="text-monospace small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</span></td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-warning text-dark">Partial</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
                                     <td>2.39</td>
                                     <td>0</td>
                                     <td>0</td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="twitter">Details</button>
                                     </td>
@@ -233,12 +227,12 @@
                                     <td>Keith Fellini</td>
                                     <td><span class="text-monospace small">tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</span></td>
                                     <td><span class="text-monospace small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</span></td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-warning text-dark">Partial</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>3080.69</td>
                                     <td>194.9</td>
                                     <td>0</td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="keith">Details</button>
                                     </td>
@@ -346,48 +340,6 @@
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tokenClaimModal">
                                 <i class="bi bi-diagram-3 me-2"></i>View Detailed Process
                             </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row mt-4">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-header bg-light">
-                            <h5 class="mb-0">Migration Progress</h5>
-                        </div>
-                        <div class="card-body">
-                            <div class="mb-4">
-                                <h6>Overall Account Migration Progress</h6>
-                                <div class="progress" style="height: 20px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                                </div>
-                            </div>
-                            <div class="mb-4">
-                                <h6>Kanley Stubrick</h6>
-                                <div class="progress" style="height: 15px;">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                                </div>
-                            </div>
-                            <div class="mb-4">
-                                <h6>Herner werzog</h6>
-                                <div class="progress" style="height: 15px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                                </div>
-                            </div>
-                            <div class="mb-4">
-                                <h6>TwitterProd</h6>
-                                <div class="progress" style="height: 15px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                                </div>
-                            </div>
-                            <div class="mb-4">
-                                <h6>Keith Fellini</h6>
-                                <div class="progress" style="height: 15px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
