Update migration steps status: mark steps 3-5 as incomplete

--- a/index.html
+++ b/index.html
@@ -254,21 +254,21 @@
                                         <div class="fw-bold">User Authentication</div>
                                         Verify user can sign in and activate their account
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
+                                    <span class="badge bg-secondary rounded-pill">Incomplete</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Token Transfer</div>
                                         Verify tokens are sent to wallet after user interaction
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
+                                    <span class="badge bg-secondary rounded-pill">Incomplete</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Data Verification</div>
                                         Verify balances and reputation are preserved
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
+                                    <span class="badge bg-secondary rounded-pill">Incomplete</span>
                                 </li>
                             </ol>
                         </div>
