Update migration steps status badges to show just 'Complete'

--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
                                         <div class="fw-bold">Tezos Snapshot</div>
                                         Take snapshot of account balances and reputation on Tezos
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
+                                    <span class="badge bg-primary rounded-pill">Complete</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Base Smart Contract Assignment</div>
                                         Assign cutover address in Base L3 smart contract
                                     </div>
-                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
+                                    <span class="badge bg-primary rounded-pill">Complete</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
