--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                         <a class="nav-link active" href="#dashboard">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#test-servers">Test Servers</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#test-accounts">Test Accounts</a>
                     </li>
                     <li class="nav-item">
@@ -98,57 +95,10 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section id="test-servers" class="mb-5">
-            <h2>Test Environments</h2>
             <div class="row">
-                <div class="col-md-6 mb-3">
-                    <div class="card h-100">
-                        <div class="card-header bg-light">
-                            <h5 class="mb-0">Test Servers</h5>
-                        </div>
-                        <div class="card-body">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Environment</th>
-                                        <th>URL</th>
-                                        <th>Status</th>
-                                        <th>Last Tested</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Staging</td>
-                                        <td><a href="https://staging.decentralized.pictures/" target="_blank">staging.decentralized.pictures</a></td>
-                                        <td><span class="badge bg-success">Active</span></td>
-                                        <td>Not started</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Production</td>
-                                        <td><a href="https://decentralized.pictures/" target="_blank">decentralized.pictures</a></td>
-                                        <td><span class="badge bg-success">Active</span></td>
-                                        <td>Not started</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Migration Testnet</td>
-                                        <td>To be deployed</td>
-                                        <td><span class="badge bg-secondary">Pending</span></td>
-                                        <td>N/A</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Base L3 Testnet</td>
-                                        <td>To be deployed</td>
-                                        <td><span class="badge bg-secondary">Pending</span></td>
-                                        <td>N/A</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="alert alert-info mt-3">
-                                <strong>Migration Code Repository:</strong> <a href="https://github.com/Decentralized-Pictures/dcp-migrations" target="_blank">github.com/Decentralized-Pictures/dcp-migrations</a>
-                            </div>
-                        </div>
+                <div class="col-12">
+                    <div class="alert alert-info">
+                        <strong>Migration Code Repository:</strong> <a href="https://github.com/Decentralized-Pictures/dcp-migrations" target="_blank">github.com/Decentralized-Pictures/dcp-migrations</a>
                     </div>
                 </div>
             </div>
